--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  name: "soundcloud-player",
-  "description" : "Choose A Category, Play Top Music",
-  "author" : {
-    "name" : "Peter Piekarczyk",
-    "email" : "peterpiekarczyk@gmail.com"
+  "name": "soundcloud-player",
+  "description": "Choose A Category, Play Top Music",
+  "author": {
+    "name": "Peter Piekarczyk",
+    "email": "peterpiekarczyk@gmail.com"
   },
-  "version" : "0.0.1",
-  "private" : true,
-  "main" : "app.js",
-  "engines" : {
-    "node" : "0.10.26"
+  "version": "0.0.1",
+  "private": true,
+  "main": "app.js",
+  "engines": {
+    "node": "0.10.26"
   },
-  "scripts" : {
-    "start" : "NODE_ENV=development node app.js"
+  "scripts": {
+    "start": "NODE_ENV=development node app.js"
   },
-  "dependencies" : {
-    "express" : "4.8.8",
-    "connect" : "3.1.1",
-    "ejs" : "1.0.0"
+  "dependencies": {
+    "connect": "^3.2.0",
+    "ejs": "^1.0.0",
+    "express": "^4.9.4"
   }
 }
