--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "node": "0.10.26"
   },
   "scripts": {
-    "start": "NODE_ENV=development node app.js"
+    "start": "NODE_ENV=development node app.js",
+    "postinstall" : "./node_modules/bower_bin/bower install"
   },
   "dependencies": {
+    "bower" : "1.3.11",
     "connect": "^3.2.0",
     "ejs": "^1.0.0",
     "express": "^4.9.4"
