--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "postinstall" : "./node_modules/bower/bin/bower install"
   },
   "dependencies": {
-    "bower" : "1.3.11",
+    "bower" : "*",
     "connect": "^3.2.0",
     "ejs": "^1.0.0",
     "express": "^4.9.4"
