--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "angular": "~1.2.25",
     "angular-logger": "~1.0.0",
-    "font-awesome": "~4.2.0"
+    "font-awesome": "~4.2.0",
+    "query-string": "~1.0.0"
   }
 }
